--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 <!-- Video yang autoplay + mute (wajib mute kalau mau autoplay) -->
 <a href="https://lynk.id/ajengwahys/3vndxok5q8gz">
     <video autoplay muted loop playsinline>
-        <source src="https://files.catbox.moe/g56yx5.mp4" type="video/mp4">
+        <source src="https://files.catbox.moe/ue2x34.mp4" type="video/mp4">
     </video>
 </a>
 
 </body>
 </html>
+
